--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,13 @@
-<p>
-  nav-bar works!
-</p>
+<nav class="navbar navbar-expand-sm">
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Add Task</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">View Task</a>
+    </li>
+  </ul>
+
+</nav>
