Injected NavBar service in NavBar

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm">
+<nav *ngIf="nav.visible" class="navbar navbar-expand-sm">
 
   <!-- Links -->
   <ul class="navbar-nav">
