--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,10 +3,10 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" routerLinkActive="active" [routerLink]="['']">Add Task</a>
+      <a class="nav-link" routerLinkActive="active" [routerLink]="['/AddTask']">Add Task</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLinkActive="active" [routerLink]="['/new']">View Task</a>
+      <a class="nav-link" routerLinkActive="active" [routerLink]="['/ViewTask']">View Task</a>
     </li>
   </ul>
 
