--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,3 +1,51 @@
-<p>
-  add-task works!
-</p>
+<div class="row">
+  <div class="col-6">
+    <form>
+      <table class="table table-borderless">
+        <tr>
+          <th>Task:</th>
+          <td>
+            <input type="text" class="form-control" />
+          </td>
+        </tr>
+        <tr>
+          <th>Priority:</th>
+          <td>
+            <input type="range" value="0" step="1" min="1" max="30" class="form-control" />
+          </td>
+        </tr>
+        <tr>
+          <th>Parent Task:</th>
+          <td>
+            <select class="form-control">
+              <option value="0" disabled selected>--Select--</option>
+              <option value="1">Task 1</option>
+              <option value="2">Task 2</option>
+              <option value="3">Task 3</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <th>Start Date:</th>
+          <td>
+            <input type="date" class="form-control" />
+          </td>
+        </tr>
+        <tr>
+          <th>End Date:</th>
+          <td>
+            <input type="date" class="form-control" />
+          </td>
+        </tr>
+        <tr>
+          <th></th>
+          <td>
+            <button class="btn btn-sm btn-grey col-4" type="submit">Add Task</button>
+            <span class="col-1"></span>
+            <button class="btn btn-sm btn-grey col-4" type="reset">Reset</button>
+          </td>
+        </tr>
+      </table>
+    </form>
+  </div>
+</div>
