--- a/src/app/add-task/add-task.component.css
+++ b/src/app/add-task/add-task.component.css
@@ -7,7 +7,7 @@
     font-family: 'Handlee', cursive;
     font-weight: bold;
 }
-.btn-grey:hover{
+.btn-grey:hover:not(:disabled){
     background-color: #acacac;
 }
 .btn-grey:focus{
@@ -20,4 +20,10 @@
 }
 .form-control:focus{
     box-shadow: 0 1px 1px #00000013 inset, 0 0 8px #2e2e2eb2;
+}
+.form-control-readonly{
+    background-color: white;
+}
+.form-control-readonly:focus{
+    box-shadow: none;
 }
