--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,23 +1,32 @@
 <div class="row">
   <div class="col-6">
-    <form>
+    <form [formGroup]="UsrFrm" (ngSubmit)="onSubmit()">
       <table class="table table-borderless">
         <tr>
           <th>Task:</th>
           <td>
-            <input type="text" class="form-control" />
+            <input formControlName="Task" type="text" class="form-control" />
+            <div *ngIf="TaskCtrl.touched && TaskCtrl.invalid" class="alert alert-danger">
+              <div *ngIf="TaskCtrl.errors.required">Task is required.</div>
+            </div>
           </td>
         </tr>
         <tr>
           <th>Priority:</th>
-          <td>
-            <input type="range" value="0" step="1" min="1" max="30" class="form-control" />
+          <td class="row">
+            <div class="col-10">
+              <input formControlName="Priority" type="range" step="1" min="0" max="30" class="form-control" />
+            </div>
+            <div class="col-2">
+              <input type="text" name="PriorityText" class="form-control form-control-readonly" [value]="this.Priority"
+                readonly>
+            </div>
           </td>
         </tr>
         <tr>
           <th>Parent Task:</th>
           <td>
-            <select class="form-control">
+            <select formControlName="ParentTask" class="form-control">
               <option value="0" disabled selected>--Select--</option>
               <option value="1">Task 1</option>
               <option value="2">Task 2</option>
@@ -28,19 +37,25 @@
         <tr>
           <th>Start Date:</th>
           <td>
-            <input type="date" class="form-control" />
+            <input formControlName="StartDate" type="date" class="form-control" />
+            <div *ngIf="StartDateCtrl.touched && StartDateCtrl.invalid" class="alert alert-danger">
+              <div *ngIf="StartDateCtrl.errors.required">Start Date is required.</div>
+            </div>
           </td>
         </tr>
         <tr>
           <th>End Date:</th>
           <td>
-            <input type="date" class="form-control" />
+            <input formControlName="EndDate" type="date" class="form-control" />
+            <div *ngIf="EndDateCtrl.touched && EndDateCtrl.invalid" class="alert alert-danger">
+              <div *ngIf="EndDateCtrl.errors.required">End Date is required.</div>
+            </div>
           </td>
         </tr>
         <tr>
           <th></th>
           <td>
-            <button class="btn btn-sm btn-grey col-4" type="submit">Add Task</button>
+            <button [disabled]="UsrFrm.invalid" class="btn btn-sm btn-grey col-4" type="submit">Add Task</button>
             <span class="col-1"></span>
             <button class="btn btn-sm btn-grey col-4" type="reset">Reset</button>
           </td>
