Designed Update task and added routing for View and update task

--- a/src/app/view-task/view-task.component.html
+++ b/src/app/view-task/view-task.component.html
@@ -75,7 +75,7 @@
         <input id="enDate" type="text" class="form-control form-control-readonly" value="15-Jan-19" readonly>
       </div>
       <div class="col-1">
-        <button class="btn btn-sm btn-grey">Edit</button>
+        <button class="btn btn-sm btn-grey" (click)="onEdit()">Edit</button>
       </div>
       <div class="col-2">
         <button class="btn btn-sm btn-grey">End Task</button>
