--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -28,9 +28,7 @@
           <td>
             <select formControlName="ParentTask" class="form-control">
               <option value="0" disabled selected>--Select--</option>
-              <option value="1">Task 1</option>
-              <option value="2">Task 2</option>
-              <option value="3">Task 3</option>
+              <option *ngFor="let task of tasks" value={{task.taskId}}>{{task.taskId}}</option>
             </select>
           </td>
         </tr>
