--- a/src/app/view-task/view-task.component.html
+++ b/src/app/view-task/view-task.component.html
@@ -1,43 +1,45 @@
 <div class="container">
   <form [formGroup]="UsrFrm">
-    <div class="row">
-      <div class="col-1">
-        <strong>Task:</strong>
+    <div formGroupName="searchGroup">
+      <div class="row">
+        <div class="col-1">
+          <strong>Task:</strong>
+        </div>
+        <div class="col-4">
+          <input formControlName="taskDetails" type="text" class="form-control">
+        </div>
+        <div class="col-1">
+          <strong>Parent Task:</strong>
+        </div>
+        <div class="col-5">
+          <input formControlName="parentTaskDetails" type="text" class="form-control">
+        </div>
       </div>
-      <div class="col-4">
-        <input type="text" class="form-control">
-      </div>
-      <div class="col-1">
-        <strong>Parent Task:</strong>
-      </div>
-      <div class="col-5">
-        <input type="text" class="form-control">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-2">
-        <strong>Priority From:</strong>
-      </div>
-      <div class="col-1">
-        <input type="text" class="form-control">
-      </div>
-      <div class="col-1">
-        <strong>Priority To:</strong>
-      </div>
-      <div class="col-1">
-        <input type="text" class="form-control">
-      </div>
-      <div class="col-1">
-        <strong>Start Date:</strong>
-      </div>
-      <div class="col-2">
-        <input type="date" class="form-control">
-      </div>
-      <div class="col-1">
-        <strong>End Date:</strong>
-      </div>
-      <div class="col-2">
-        <input type="date" class="form-control">
+      <div class="row">
+        <div class="col-2">
+          <strong>Priority From:</strong>
+        </div>
+        <div class="col-1">
+          <input formControlName="priorityFrom" type="text" class="form-control">
+        </div>
+        <div class="col-1">
+          <strong>Priority To:</strong>
+        </div>
+        <div class="col-1">
+          <input formControlName="priorityTo" type="text" class="form-control">
+        </div>
+        <div class="col-1">
+          <strong>Start Date:</strong>
+        </div>
+        <div class="col-2">
+          <input formControlName="startDate" type="date" class="form-control">
+        </div>
+        <div class="col-1">
+          <strong>End Date:</strong>
+        </div>
+        <div class="col-2">
+          <input formControlName="endDate" type="date" class="form-control">
+        </div>
       </div>
     </div>
     <hr style="border-top: dotted 1px;" />
@@ -59,30 +61,37 @@
           <strong>End Date</strong>
         </div>
       </div>
-      <div class="row">
-        <div class="col-3">
-          <input type="text" class="form-control form-control-big" value="Task 1" readonly>
+      <div formGroupName="displayGroup" *ngFor="let viewTask of viewTasks">
+        <div class="row">
+          <div class="col-3">
+            <input formControlName="taskDetails" type="text" class="form-control form-control-big" value={{viewTask.taskDetails}}
+              readonly>
+          </div>
+          <div class="col-3">
+            <input formControlName="parentTaskDetails" type="text" class="form-control form-control-big" value={{viewTask.parentTaskDetails}}
+              readonly>
+          </div>
+          <div class="col-1">
+            <input formControlName="priority" type="text" class="form-control form-control-readonly" value={{viewTask.priority}}
+              readonly>
+          </div>
+          <div class="col-1">
+            <input formControlName="startDate" id="stDate" type="text" class="form-control form-control-readonly" value="{{viewTask.startDate|date:'dd-MMM-yy'}}"
+              readonly>
+          </div>
+          <div class="col-1">
+            <input formControlName="endDate" id="enDate" type="text" class="form-control form-control-readonly" value="{{viewTask.endDate|date:'dd-MMM-yy'}}"
+              readonly>
+          </div>
+          <div class="col-1">
+            <button class="btn btn-sm btn-grey" (click)="onEdit()">Edit</button>
+          </div>
+          <div class="col-2">
+            <button class="btn btn-sm btn-grey">End Task</button>
+          </div>
         </div>
-        <div class="col-3">
-          <input type="text" class="form-control form-control-big" value="Parent Task 1" readonly>
-        </div>
-        <div class="col-1">
-          <input type="text" class="form-control form-control-readonly" value="12" readonly>
-        </div>
-        <div class="col-1">
-          <input id="stDate" type="text" class="form-control form-control-readonly" value="12-Jan-19" readonly>
-        </div>
-        <div class="col-1">
-          <input id="enDate" type="text" class="form-control form-control-readonly" value="15-Jan-19" readonly>
-        </div>
-        <div class="col-1">
-          <button class="btn btn-sm btn-grey" (click)="onEdit()">Edit</button>
-        </div>
-        <div class="col-2">
-          <button class="btn btn-sm btn-grey">End Task</button>
-        </div>
+        <hr class="dotted-light" />
       </div>
-      <hr class="dotted-light" />
     </div>
   </form>
 </div>
