--- a/src/app/view-task/view-task.component.html
+++ b/src/app/view-task/view-task.component.html
@@ -84,7 +84,7 @@
               readonly>
           </div>
           <div class="col-1">
-            <button class="btn btn-sm btn-grey" (click)="onEdit()">Edit</button>
+            <button class="btn btn-sm btn-grey" (click)="onEdit(viewTask.taskId)">Edit</button>
           </div>
           <div class="col-2">
             <button class="btn btn-sm btn-grey">End Task</button>
